# chrred

./: .gitignore  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: automation.yml
src/: configuration.py
src/application/use_cases/: create_url.py  redirect_url.py
src/domain/: models.py  schemas.py
src/infrastructure/repositories/: dynamodb_matching_table.py
src/interfaces/: lambda_function.py
terraform/: Makefile  aws_acm.tf  aws_api_gateway.tf  aws_dynamodb.tf  aws_iam.tf  aws_lambda.tf  aws_route53.tf  providers.tf  variables.tf
