[tool.poetry]
name = "chrred"
version = "0.1.0"
description = "Shortens links to Chrood's services and other offerings"
authors = ["Colin Tessarzick <colintessarzick@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9.15"
aws-lambda-powertools = "^2.14.1"
requests = "^2.28.2"
aws-xray-sdk = "^2.12.0"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.114"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
moto = "^4.1.7"
types-requests = "^2.28.11.17"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \__pycache__
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
pythonpath = ["src"]
env = ["environment=local"]

[tool.mypy]
no_implicit_optional = true
disallow_untyped_defs = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["boto3", "validators", "moto", "moto.core", "moto.dynamodb"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
